<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SearchActivity!</string>
    <string name="app_name">Directorio</string>
    <string name="bienvenido">Bienvenido a la Aplicación</string>
    <string name="seleccion_ciudad">Buscar en: </string>

    <string-array name="ciudades_array">
        <item>Todas las ciudades</item>
        <item>Torreón, Coah. Mex.</item>
        <item>Gómez Palacio, Dgo. Mex.</item>
        <item>Saltillo, Coah. Mex.</item>
        <item>Durango, Dgo. Mex.</item>
        <item>Lerdo, dgo. Mex.</item>
        <item>San Miguel de Allende, Gto.</item>
        <item>Acapulco, Gro.</item>
        <item>Morelia, Mich.</item>
        <item>Mérida, Yuc.</item>
        <item>México, D.F.</item>
        <item>Guadalajara, Jal.</item>
        <item>León, Gto.</item>
    </string-array>

    <string name="string_localidades">En un radio de:</string>
    <string name="string_redonda">--</string>
    <string name="buscando">¿Que estas buscando?</string>
    <string name="buscar">BUSCAR</string>
    <string name="abecedario">Abecedario</string>
    <string name="favoritos">Favoritos</string>
    <string name="info_1">La manera más fácil de encontrar y ubicar lo que necesitas.</string>
    <string name="info_2">"¿Quieres aparecer en "</string>
    <string name="eldirectoriomx">ElDirectorio.mx?</string>
    <string name="insert_logo_here">Insert logo here</string>
    <string name="contactanos">Contáctanos: </string>
    <string name="email">Email:  </string>
    <string name="eldirectorioemail">eldirectorio@publisorpresas.com.mx</string>
    <string name="comarca_lagunera">Comarca Lagunera:  </string>
    <string name="telefonocl"> (871)711-0810</string>
    <string name="int_rep">"Interior de la Rep: "</string>
    <string name="telefono_int_rep"> 01800-501-7279</string>
    <string name="mail_prueba">caralftir@gmail.com</string>
    <string name="subject">Probando!!!</string>
    <string name="regresar">Cerrar</string>
    <string name="directorio_img_string">Logo que te lleva a el sitio del Directorio.</string>
    <string name="publy_info">Logo de publysorpresas. Da click para ir al sitio web.</string>
    <string name="banner_eldirectorio">Banner El Directorio.</string>
    <string name="banner_acercade">Banner Acerca De.</string>
    <string name="logo_negocio">Logo del Negocio</string>
    <string name="datos_empresa">Datos de la empresa</string>
    <string name="testing">TESTING</string>
    <string name="sucursales">Sucursales</string>
    <string name="trololololo">asdkfh</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test_list">TestList</string>

</resources>