<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bli"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spinner_localidades"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="232dp" />

    <EditText
        android:id="@+id/busqueda"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="163dp"
        android:ems="10"
        android:hint="@string/buscando"
        android:inputType="text" />

    <SeekBar
        android:id="@+id/radioALaRedonda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="-7dp"
        android:layout_y="293dp"
        android:max="8" />

    <TextView
        android:id="@+id/text_localidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="13dp"
        android:layout_y="278dp"
        android:text="@string/string_localidades" />

    <TextView
        android:id="@+id/seleccionCiudadtexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="213dp"
        android:text="@string/seleccion_ciudad" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_x="282dp"
        android:layout_y="70dp"
        android:background="@drawable/info_icon" />

    <TextView
        android:id="@+id/mostrar_metros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="112dp"
        android:layout_y="280dp"
        android:text="@string/string_redonda" />

    <include layout="@layout/menubar"/>

</AbsoluteLayout>