<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/widgetscroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/negocio_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo_negocio" />

            <TextView
                android:id="@+id/datos_empresa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/negocio_logo"
                android:background="@drawable/barra"
                android:text="@string/datos_empresa"
                android:textColor="@color/White" />

            <TextView
                android:id="@+id/nombre_empresa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/datos_empresa"
                android:text="@string/testing" />

            <TextView
                android:id="@+id/descripcion_empresa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nombre_empresa"
                android:text="@string/testing" />

            <TextView
                android:id="@+id/direccion_empresa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descripcion_empresa"
                android:text="@string/testing" />

            <TextView
                android:id="@+id/sucursales_empresa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/direccion_empresa"
                android:background="@drawable/barra"
                android:text="@string/sucursales"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linear_layout_si"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sucursales_empresa"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/contacto_empresa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout_si"
                android:background="@drawable/barra"
                android:text="@string/contacto" />
            
            <LinearLayout
                android:id="@+id/linear_layout_contacto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contacto_empresa"
                android:orientation="vertical"
                >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>